try fix contrast error

--- a/styles.css
+++ b/styles.css
@@ -204,4 +204,5 @@ h3 {
     padding: 3vmin 0;
     color: #fff; 
     font-weight: 600;
+    text-shadow: 2px 2px 4px #000000; 
 }
